--- a/Android/res/values/strings.xml
+++ b/Android/res/values/strings.xml
@@ -11,8 +11,8 @@
 <string name="no_entries">No entries found.</string>
 <string name="VersionStringBeta">Version $V$ ($S$-$D$)</string>
 
-<string name="About">Learn Na\'vi Mobile was created by Omängum Fra\'uti and Seze from the Learn Na\'vi online community. Further edits on this Android app by Tirea Aean and Palulukan Maktoyu Ta\'lengean. This app was created as a reference and learning tool for the Na\'vi Language community. Special Thanks to Taronyu and Tuiq for the dictionary and database components and to all members of the community who helped with development.</string>
-<string name="Disclaimer">The Na\'vi language was created by Paul Frommer. Much of the information displayed in this App was written by Prof. Frommer and is presented here for educational purposes only. Learn Na\'vi is not affiliated with the official Avatar website, James Cameron, or the Twentieth Century-Fox Film Corporation. All trademarks and servicemarks are the properties of their respective owners.</string>
+<string name="About">Learn Na\'vi Mobile was created by Omängum Fra\'uti and Seze from the Learn Na\'vi online community. Further edits on this Android app by Tirea Aean and Palulukan Maktoyu Ta\'lengean. This app was created as a reference and learning tool for the Na\'vi Language community. Special Thanks to Toruk Makto and Tuiq for the dictionary and database components and to all members of the community who helped with development and testing.</string>
+<string name="Disclaimer">The Na\'vi language was created by Dr. Paul Frommer. Much of the information displayed in this App was written by Dr. Frommer, some with input by the Learn Na\'vi Community and is presented here for educational purposes only. Learn Na\'vi is not affiliated with the official Avatar website, James Cameron, or the Twentieth Century-Fox Film Corporation. All trademarks and servicemarks are the properties of their respective owners.</string>
 
 <string name="VersionString">Version $V$</string>
 <string name="DBVersionString">Word List Version $D$</string>
@@ -22,7 +22,7 @@
 <string name="ToNavi">English / Na\'vi</string>
 <string name="FromNavi">Na\'vi / \'Ìnglìsì</string>
 
-<string name="UpdateAvailable">An updated word list is available, download it now?</string>
+<string name="UpdateAvailable">An updated word list is available. Download it now?</string>
 <string name="DownloadingUpdate">Downloading new word list</string>
 
 <string name="SearchHint">Search Na\'vi words</string>
